ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: dev
    networking.gke.io/managed-certificates: dev-unwanted-fun
  name: ingress
spec:
  backend:
    serviceName: blog
    servicePort: 80
---
